--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
 	"description": "Control for PJLink enables projectors",
 	"author": "Sylvain Vriens <hello@sylvain.nl> (http://sylvain.nl/)",
 	"main": "./index",
+	"dependencies": {
+		"extend": "x"
+	},
 	"repository":
 	{
 		"type" : "git",
